| Summary: | ASTERISK-26365: rtp: Offer with multiple payloads for same codec is incorrectly handled | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-09-13 08:22:27 | Date Closed: | 2016-09-20 09:36:30 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/RTP |
| Versions: | 14.0.0-beta2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Given the following configuration:
allow=!all,ulaw,h264 And an offer that contains a media stream with ulaw and a media stream with *2* H264 payloads our answer will contain the first payload of their offer, but we incorrectly remove that payload mapping internally. This results in the call negotiating the first payload in the offer but incoming traffic NOT being identified as H264. If a static payload exists it will be matched as that instead. For example if the first payload is 97 we would read the H264 in as iLBC. We need to only add and accept the first payload when doing SDP negotiation. | ||
| Comments: | |||